bant/tool/cc-preprocessor.cc
/* Generated by re2c 4.5.1 on Sun Jun 28 19:20:55 2026 */
#line 1 "bant/tool/cc-preprocessor.re"
// -*- c++ -*-
// bant - Bazel Navigation Tool
// Copyright (C) 2026 Henner Zeller <h.zeller@acm.org>
//
// This program is free software; you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation; either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License along
// with this program; if not, write to the Free Software Foundation, Inc.,
// 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA

// Until we have re2c in BCR, we manually do this and check in.
// re2c -T bant/tool/cc-preprocessor.re > bant/tool/cc-preprocessor.cc

#include "bant/tool/cc-preprocessor.h"

#include <cctype>
#include <cstddef>
#include <string>
#include <string_view>
#include <vector>

#include "absl/strings/str_cat.h"
#include "bant/tool/preprocess-utils.h"

namespace bant {
inline bool all_space(const char *from, const char *to) {
  while (from < to) {
    if (!isblank(*from++)) return false;
  }
  return true;
}

std::vector<TaggedInclude> PreprocessInternal(std::string_view source,
                                              DefineMap &defines) {
  struct BranchState {
    bool is_active;
    bool is_ambiguous;  // e.g. due to #ifndef, i.e. the absence of a value.
    std::string_view condition;
  };
  std::vector<BranchState> condition_stack;
  bool current_emitting = true;

  auto update_emitting_state = [&]() {
    current_emitting =
      condition_stack.empty() ? true : condition_stack.back().is_active;
  };

  auto is_ambiguous = [&]() {
    return condition_stack.empty() ? false
                                   : condition_stack.back().is_ambiguous;
  };

  auto get_active_condition = [&]() {
    // If there is no condition, still return an empty string, coming from
    // the source to be locatable.
    return condition_stack.empty() ? source.substr(0, 0)
                                   : condition_stack.back().condition;
  };

  // re2c internal variables to keep track of lexing state.
  const char *YYCURSOR = source.data();
  const char *const YYLIMIT = source.data() + source.size();
  const char *YYMARKER;
  const char *yyt1, *yyt2, *yyt3, *yyt4;

  // Variables remembering 'capture group' ranges.
  const char *start_of_line = source.data();
  const char *pound_start;
  const char *b_start;
  const char *d_start, *d_end;
  const char *i_start, *i_end;
  const char *k_start, *k_end;
  const char *v_start, *v_end;

  std::vector<TaggedInclude> result;
  while (YYCURSOR < YYLIMIT) {
#line 89 "<stdout>"
    {
      char yych;
      unsigned int yyaccept = 0;
      yych = *YYCURSOR;
      switch (yych) {
      case '\n': goto yy3;
      case '#': yyt1 = YYCURSOR; goto yy4;
      case '/': goto yy5;
      case 'R': goto yy6;
      default: goto yy1;
      }
    yy1:
      ++YYCURSOR;
    yy2:
#line 217 "bant/tool/cc-preprocessor.re"
    {
      continue;
    }
#line 110 "<stdout>"
    yy3:
      ++YYCURSOR;
#line 210 "bant/tool/cc-preprocessor.re"
      {
        start_of_line = YYCURSOR;
        continue;
      }
#line 118 "<stdout>"
    yy4:
      yyaccept = 0;
      yych = *(YYMARKER = ++YYCURSOR);
      switch (yych) {
      case '\t':
      case ' ':
      case 'd':
      case 'e':
      case 'i':
      case 'u': goto yy8;
      default: goto yy2;
      }
    yy5:
      yych = *++YYCURSOR;
      switch (yych) {
      case '*': goto yy14;
      case '/': goto yy15;
      default: goto yy2;
      }
    yy6:
      yyaccept = 0;
      yych = *(YYMARKER = ++YYCURSOR);
      switch (yych) {
      case '"': goto yy16;
      default: goto yy2;
      }
    yy7:
      yych = *++YYCURSOR;
    yy8:
      switch (yych) {
      case '\t':
      case ' ': goto yy7;
      case 'd': goto yy10;
      case 'e': goto yy11;
      case 'i': yyt2 = YYCURSOR; goto yy12;
      case 'u': goto yy13;
      default: goto yy9;
      }
    yy9:
      YYCURSOR = YYMARKER;
      if (yyaccept == 0)
        goto yy2;
      else
        goto yy25;
    yy10:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'e': goto yy17;
      default: goto yy9;
      }
    yy11:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'l': goto yy18;
      case 'n': goto yy19;
      default: goto yy9;
      }
    yy12:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'f': goto yy20;
      case 'n': goto yy21;
      default: goto yy9;
      }
    yy13:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'n': goto yy22;
      default: goto yy9;
      }
    yy14:
      ++YYCURSOR;
#line 182 "bant/tool/cc-preprocessor.re"
      {
        const std::string_view remainder(YYCURSOR, YYLIMIT - YYCURSOR);
        const size_t close_pos = remainder.find("*/");
        if (close_pos != std::string_view::npos) {
          YYCURSOR += close_pos + 2;
        } else {
          YYCURSOR = YYLIMIT;
        }
        continue;
      }
#line 202 "<stdout>"
    yy15:
      ++YYCURSOR;
#line 175 "bant/tool/cc-preprocessor.re"
      {
        while (YYCURSOR < YYLIMIT && *YYCURSOR != '\n') {
          YYCURSOR++;
        }
        continue;
      }
#line 210 "<stdout>"
    yy16:
      yych = *++YYCURSOR;
      switch (yych) {
      case '$':
      case ')':
      case '*':
      case '+':
      case '-':
      case '.':
      case '0':
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9':
      case '?':
      case 'A':
      case 'B':
      case 'C':
      case 'D':
      case 'E':
      case 'F':
      case 'G':
      case 'H':
      case 'I':
      case 'J':
      case 'K':
      case 'L':
      case 'M':
      case 'N':
      case 'O':
      case 'P':
      case 'Q':
      case 'R':
      case 'S':
      case 'T':
      case 'U':
      case 'V':
      case 'W':
      case 'X':
      case 'Y':
      case 'Z':
      case '[':
      case ']':
      case '^':
      case '_':
      case 'a':
      case 'b':
      case 'c':
      case 'd':
      case 'e':
      case 'f':
      case 'g':
      case 'h':
      case 'i':
      case 'j':
      case 'k':
      case 'l':
      case 'm':
      case 'n':
      case 'o':
      case 'p':
      case 'q':
      case 'r':
      case 's':
      case 't':
      case 'u':
      case 'v':
      case 'w':
      case 'x':
      case 'y':
      case 'z':
      case '{':
      case '|':
      case '}': yyt1 = YYCURSOR; goto yy23;
      case '(': yyt1 = YYCURSOR; goto yy24;
      default: goto yy9;
      }
    yy17:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'f': goto yy26;
      default: goto yy9;
      }
    yy18:
      yych = *++YYCURSOR;
      switch (yych) {
      case 's': goto yy27;
      default: goto yy9;
      }
    yy19:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'd': goto yy28;
      default: goto yy9;
      }
    yy20:
      yych = *++YYCURSOR;
      switch (yych) {
      case '\t':
      case ' ': goto yy29;
      case 'd': goto yy30;
      case 'n': goto yy31;
      default: goto yy9;
      }
    yy21:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'c': goto yy32;
      default: goto yy9;
      }
    yy22:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'd': goto yy33;
      default: goto yy9;
      }
    yy23:
      yych = *++YYCURSOR;
      switch (yych) {
      case '$':
      case ')':
      case '*':
      case '+':
      case '-':
      case '.':
      case '0':
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9':
      case '?':
      case 'A':
      case 'B':
      case 'C':
      case 'D':
      case 'E':
      case 'F':
      case 'G':
      case 'H':
      case 'I':
      case 'J':
      case 'K':
      case 'L':
      case 'M':
      case 'N':
      case 'O':
      case 'P':
      case 'Q':
      case 'R':
      case 'S':
      case 'T':
      case 'U':
      case 'V':
      case 'W':
      case 'X':
      case 'Y':
      case 'Z':
      case '[':
      case ']':
      case '^':
      case '_':
      case 'a':
      case 'b':
      case 'c':
      case 'd':
      case 'e':
      case 'f':
      case 'g':
      case 'h':
      case 'i':
      case 'j':
      case 'k':
      case 'l':
      case 'm':
      case 'n':
      case 'o':
      case 'p':
      case 'q':
      case 'r':
      case 's':
      case 't':
      case 'u':
      case 'v':
      case 'w':
      case 'x':
      case 'y':
      case 'z':
      case '{':
      case '|':
      case '}': goto yy23;
      case '(': goto yy24;
      default: goto yy9;
      }
    yy24:
      yyaccept = 1;
      yych = *(YYMARKER = ++YYCURSOR);
      switch (yych) {
      case '$':
      case ')':
      case '*':
      case '+':
      case '-':
      case '.':
      case '0':
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9':
      case '?':
      case 'A':
      case 'B':
      case 'C':
      case 'D':
      case 'E':
      case 'F':
      case 'G':
      case 'H':
      case 'I':
      case 'J':
      case 'K':
      case 'L':
      case 'M':
      case 'N':
      case 'O':
      case 'P':
      case 'Q':
      case 'R':
      case 'S':
      case 'T':
      case 'U':
      case 'V':
      case 'W':
      case 'X':
      case 'Y':
      case 'Z':
      case '[':
      case ']':
      case '^':
      case '_':
      case 'a':
      case 'b':
      case 'c':
      case 'd':
      case 'e':
      case 'f':
      case 'g':
      case 'h':
      case 'i':
      case 'j':
      case 'k':
      case 'l':
      case 'm':
      case 'n':
      case 'o':
      case 'p':
      case 'q':
      case 'r':
      case 's':
      case 't':
      case 'u':
      case 'v':
      case 'w':
      case 'x':
      case 'y':
      case 'z':
      case '{':
      case '|':
      case '}': goto yy23;
      case '(': goto yy24;
      default: goto yy25;
      }
    yy25:
      d_start = yyt1;
      d_end = YYCURSOR;
      d_end -= 1;
#line 195 "bant/tool/cc-preprocessor.re"
      {
        const std::string_view delim(d_start, d_end - d_start);
        const std::string close_seq = absl::StrCat(")", delim, "\"");

        const std::string_view remainder(YYCURSOR, YYLIMIT - YYCURSOR);
        size_t close_pos = remainder.find(close_seq);
        if (close_pos != std::string_view::npos) {
          YYCURSOR += close_pos + close_seq.size();
        } else {
          YYCURSOR = YYLIMIT;
        }
        continue;
      }
#line 519 "<stdout>"
    yy26:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'i': goto yy34;
      default: goto yy9;
      }
    yy27:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'e': goto yy35;
      default: goto yy9;
      }
    yy28:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'i': goto yy36;
      default: goto yy9;
      }
    yy29:
      yych = *++YYCURSOR;
      switch (yych) {
      case '\t':
      case ' ': goto yy29;
      case '0':
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9':
      case 'A':
      case 'B':
      case 'C':
      case 'D':
      case 'E':
      case 'F':
      case 'G':
      case 'H':
      case 'I':
      case 'J':
      case 'K':
      case 'L':
      case 'M':
      case 'N':
      case 'O':
      case 'P':
      case 'Q':
      case 'R':
      case 'S':
      case 'T':
      case 'U':
      case 'V':
      case 'W':
      case 'X':
      case 'Y':
      case 'Z':
      case '_':
      case 'a':
      case 'b':
      case 'c':
      case 'd':
      case 'e':
      case 'f':
      case 'g':
      case 'h':
      case 'i':
      case 'j':
      case 'k':
      case 'l':
      case 'm':
      case 'n':
      case 'o':
      case 'p':
      case 'q':
      case 'r':
      case 's':
      case 't':
      case 'u':
      case 'v':
      case 'w':
      case 'x':
      case 'y':
      case 'z': yyt2 = YYCURSOR; goto yy37;
      default: goto yy9;
      }
    yy30:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'e': goto yy39;
      default: goto yy9;
      }
    yy31:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'd': goto yy30;
      default: goto yy9;
      }
    yy32:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'l': goto yy40;
      default: goto yy9;
      }
    yy33:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'e': goto yy41;
      default: goto yy9;
      }
    yy34:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'n': goto yy42;
      default: goto yy9;
      }
    yy35:
      ++YYCURSOR;
      pound_start = yyt1;
#line 124 "bant/tool/cc-preprocessor.re"
      {
        if (!all_space(start_of_line, pound_start)) continue;
        if (!condition_stack.empty()) {
          condition_stack.back().is_active ^= true;
          update_emitting_state();
        }
        continue;
      }
#line 652 "<stdout>"
    yy36:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'f': goto yy43;
      default: goto yy9;
      }
    yy37:
      yych = *++YYCURSOR;
      switch (yych) {
      case '0':
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9':
      case 'A':
      case 'B':
      case 'C':
      case 'D':
      case 'E':
      case 'F':
      case 'G':
      case 'H':
      case 'I':
      case 'J':
      case 'K':
      case 'L':
      case 'M':
      case 'N':
      case 'O':
      case 'P':
      case 'Q':
      case 'R':
      case 'S':
      case 'T':
      case 'U':
      case 'V':
      case 'W':
      case 'X':
      case 'Y':
      case 'Z':
      case '_':
      case 'a':
      case 'b':
      case 'c':
      case 'd':
      case 'e':
      case 'f':
      case 'g':
      case 'h':
      case 'i':
      case 'j':
      case 'k':
      case 'l':
      case 'm':
      case 'n':
      case 'o':
      case 'p':
      case 'q':
      case 'r':
      case 's':
      case 't':
      case 'u':
      case 'v':
      case 'w':
      case 'x':
      case 'y':
      case 'z': goto yy37;
      default: goto yy38;
      }
    yy38:
      pound_start = yyt1;
      v_start = yyt2;
      v_end = YYCURSOR;
#line 95 "bant/tool/cc-preprocessor.re"
      {
        if (!all_space(start_of_line, pound_start)) continue;
        const std::string_view value(v_start, v_end - v_start);
        const std::string_view condition(pound_start, v_end - pound_start);
        const auto parsed_value = ParsePreprocessValue(value, defines);
        const bool is_active = current_emitting && parsed_value.is_on;
        condition_stack.emplace_back(is_active, parsed_value.is_ambiguous,
                                     condition);
        update_emitting_state();

        continue;
      }
#line 744 "<stdout>"
    yy39:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'f': goto yy44;
      default: goto yy9;
      }
    yy40:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'u': goto yy45;
      default: goto yy9;
      }
    yy41:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'f': goto yy46;
      default: goto yy9;
      }
    yy42:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'e': goto yy47;
      default: goto yy9;
      }
    yy43:
      ++YYCURSOR;
      pound_start = yyt1;
#line 134 "bant/tool/cc-preprocessor.re"
      {
        if (!all_space(start_of_line, pound_start)) continue;
        if (!condition_stack.empty()) {
          condition_stack.pop_back();
          update_emitting_state();
        }
        continue;
      }
#line 781 "<stdout>"
    yy44:
      yych = *++YYCURSOR;
      switch (yych) {
      case '\t':
      case ' ': goto yy48;
      default: goto yy9;
      }
    yy45:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'd': goto yy49;
      default: goto yy9;
      }
    yy46:
      yych = *++YYCURSOR;
      switch (yych) {
      case '\t':
      case ' ': goto yy50;
      default: goto yy9;
      }
    yy47:
      yych = *++YYCURSOR;
      switch (yych) {
      case '\t':
      case ' ': goto yy51;
      default: goto yy9;
      }
    yy48:
      yych = *++YYCURSOR;
      switch (yych) {
      case '\t':
      case ' ': goto yy48;
      case '0':
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9':
      case 'A':
      case 'B':
      case 'C':
      case 'D':
      case 'E':
      case 'F':
      case 'G':
      case 'H':
      case 'I':
      case 'J':
      case 'K':
      case 'L':
      case 'M':
      case 'N':
      case 'O':
      case 'P':
      case 'Q':
      case 'R':
      case 'S':
      case 'T':
      case 'U':
      case 'V':
      case 'W':
      case 'X':
      case 'Y':
      case 'Z':
      case '_':
      case 'a':
      case 'b':
      case 'c':
      case 'd':
      case 'e':
      case 'f':
      case 'g':
      case 'h':
      case 'i':
      case 'j':
      case 'k':
      case 'l':
      case 'm':
      case 'n':
      case 'o':
      case 'p':
      case 'q':
      case 'r':
      case 's':
      case 't':
      case 'u':
      case 'v':
      case 'w':
      case 'x':
      case 'y':
      case 'z': yyt3 = YYCURSOR; goto yy52;
      default: goto yy9;
      }
    yy49:
      yych = *++YYCURSOR;
      switch (yych) {
      case 'e': goto yy54;
      default: goto yy9;
      }
    yy50:
      yych = *++YYCURSOR;
      switch (yych) {
      case '\t':
      case ' ': goto yy50;
      case '0':
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9':
      case 'A':
      case 'B':
      case 'C':
      case 'D':
      case 'E':
      case 'F':
      case 'G':
      case 'H':
      case 'I':
      case 'J':
      case 'K':
      case 'L':
      case 'M':
      case 'N':
      case 'O':
      case 'P':
      case 'Q':
      case 'R':
      case 'S':
      case 'T':
      case 'U':
      case 'V':
      case 'W':
      case 'X':
      case 'Y':
      case 'Z':
      case '_':
      case 'a':
      case 'b':
      case 'c':
      case 'd':
      case 'e':
      case 'f':
      case 'g':
      case 'h':
      case 'i':
      case 'j':
      case 'k':
      case 'l':
      case 'm':
      case 'n':
      case 'o':
      case 'p':
      case 'q':
      case 'r':
      case 's':
      case 't':
      case 'u':
      case 'v':
      case 'w':
      case 'x':
      case 'y':
      case 'z': yyt2 = YYCURSOR; goto yy55;
      default: goto yy9;
      }
    yy51:
      yych = *++YYCURSOR;
      switch (yych) {
      case '\t':
      case ' ': goto yy51;
      case '0':
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9':
      case 'A':
      case 'B':
      case 'C':
      case 'D':
      case 'E':
      case 'F':
      case 'G':
      case 'H':
      case 'I':
      case 'J':
      case 'K':
      case 'L':
      case 'M':
      case 'N':
      case 'O':
      case 'P':
      case 'Q':
      case 'R':
      case 'S':
      case 'T':
      case 'U':
      case 'V':
      case 'W':
      case 'X':
      case 'Y':
      case 'Z':
      case '_':
      case 'a':
      case 'b':
      case 'c':
      case 'd':
      case 'e':
      case 'f':
      case 'g':
      case 'h':
      case 'i':
      case 'j':
      case 'k':
      case 'l':
      case 'm':
      case 'n':
      case 'o':
      case 'p':
      case 'q':
      case 'r':
      case 's':
      case 't':
      case 'u':
      case 'v':
      case 'w':
      case 'x':
      case 'y':
      case 'z': yyt2 = YYCURSOR; goto yy57;
      default: goto yy9;
      }
    yy52:
      yych = *++YYCURSOR;
      switch (yych) {
      case '0':
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9':
      case 'A':
      case 'B':
      case 'C':
      case 'D':
      case 'E':
      case 'F':
      case 'G':
      case 'H':
      case 'I':
      case 'J':
      case 'K':
      case 'L':
      case 'M':
      case 'N':
      case 'O':
      case 'P':
      case 'Q':
      case 'R':
      case 'S':
      case 'T':
      case 'U':
      case 'V':
      case 'W':
      case 'X':
      case 'Y':
      case 'Z':
      case '_':
      case 'a':
      case 'b':
      case 'c':
      case 'd':
      case 'e':
      case 'f':
      case 'g':
      case 'h':
      case 'i':
      case 'j':
      case 'k':
      case 'l':
      case 'm':
      case 'n':
      case 'o':
      case 'p':
      case 'q':
      case 'r':
      case 's':
      case 't':
      case 'u':
      case 'v':
      case 'w':
      case 'x':
      case 'y':
      case 'z': goto yy52;
      default: goto yy53;
      }
    yy53:
      pound_start = yyt1;
      k_start = yyt2;
      v_start = yyt3;
      v_end = YYCURSOR;
#line 109 "bant/tool/cc-preprocessor.re"
      {
        if (!all_space(start_of_line, pound_start)) continue;
        const bool is_ifndef = (k_start[2] == 'n');
        const std::string_view macro(v_start, v_end - v_start);
        const std::string_view condition(pound_start, v_end - pound_start);

        const bool macro_known = defines.contains(macro);
        const bool is_active = current_emitting && (macro_known ^ is_ifndef);
        condition_stack.emplace_back(is_active, !macro_known, condition);
        update_emitting_state();
